* Implemented adding pdf to create post + some files refactoring

--- a/src/app/@feature/post/create-post/add-post.component.html
+++ b/src/app/@feature/post/create-post/add-post.component.html
@@ -82,7 +82,6 @@
           #description
           class="add-subreddit-post__data-name"
           type="text"
-          required
           [ngClass]="{
             'form__error-input': validations.displayErrorMessageDescription
           }"
@@ -121,6 +120,33 @@
         />
         <div class="add-subreddit-post__img-wrapper">
           <img class="add-subreddit-post__img" [src]="imgURL" *ngIf="imgURL" />
+        </div>
+      </div>
+      <div class="add-subreddit-post__data-wrapper">
+        <p class="add-subreddit-post__data-title">PDF File</p>
+        <p class="add-subreddit-post__desc">Choose a PDF file to upload.</p>
+        <label for="file-upload-pdf" class="custom-file-upload">
+          <img
+            class="file-upload__img"
+            src="../../assets/images/cloud-arrow-up-solid.svg"
+            alt="Upload PDF Svg File"
+          />
+          Upload PDF
+        </label>
+        <p class="form__error-text" *ngIf="pdfFileErrorMessage">
+          {{ pdfFileErrorMessage }}
+        </p>
+        <input
+          id="file-upload-pdf"
+          class="add-subreddit-post__data-name"
+          type="file"
+          placeholder="PDF File"
+          accept="application/pdf"
+          #filePdf
+          (change)="uploadPdf(filePdf.files)"
+        />
+        <div class="add-subreddit-post__pdf-wrapper">
+          <p class="add-subreddit-post__pdf-name">{{ pdfName }}</p>
         </div>
       </div>
       <div class="add-subreddit-post__data-wrapper">
