--- a/src/scss/components/_add-subreddit-post.scss
+++ b/src/scss/components/_add-subreddit-post.scss
@@ -118,3 +118,9 @@ input[type="file"] {
   width: 18px;
   margin-right: 5px;
 }
+
+.add-subreddit-post__pdf-name {
+  font-size: 14px;
+  margin-top: 15px;
+  color: rgb(25, 25, 25);
+}
